# pynetconsole

./: .gitignore  .travis.yml  LICENSE  README.rst  setup.cfg  setup.py
netconsole/: __init__.py  __main__.py  _fakeds.py  netconsole.py
tests/: run_tests.sh  test_nc.py
