[metadata]
name = roborio-pkgtools
description = A pure python implementation of a NetConsole listener
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/robotpy/pynetconsole
license = ISC
license_file = LICENSE
author = Dustin Spicuzza
author_email = robotpy@googlegroups.com

[options]
packages = find:
setup_requires =
    setuptools_scm > 6
python_requires = >=3.6

[options.entry_points]
console_scripts =
    netconsole = netconsole.netconsole:main
